# todomd

./: CLAUDE.md  LICENSE  README.md  flake.nix  pyproject.toml  sample_config.yml  spec.md  todo.md
tests/: test_airtable.py
todomd/: datasource.py  main.py  model.py  task.py  todo_file.py  ui.py
todomd/datasources/: airtable.py  markdown_dir.py  markdown_file.py
